[TP-7] fix api key issue

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.defer-datasource-initialization=true
 app.home=47.203821, 38.944089
-app.google.api-key=AIzaSyAlZHZQm4GGt40NQfVPBRz0wcu8vYMfEEI
+app.google.api-key=
 app.yandex.geocoding.url=https://geocode-maps.yandex.ru/1.x
