--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -11,3 +11,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+app.home=47.203821, 38.944089
+app.google.api-key=AIzaSyAlZHZQm4GGt40NQfVPBRz0wcu8vYMfEEI
+app.yandex.geocoding.url=https://geocode-maps.yandex.ru/1.x
